# multimodal_model_ROS2

./: .gitignore  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/sam2_ros/lib/sam2_ros/: camera_publisher  florence_input_node  florence_model_node  sam2_execution_node  sam2_model_node  sam2_segmentation_node
install/sam2_ros/share/sam2_ros/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build  latest_list
src/: .gitignore
src/sam2_ros/: package.xml  setup.cfg  setup.py
src/sam2_ros/sam2_ros/: camera_publisher.py  florence_model_node.py  sam2_execution_node.py  sam2_processor.py  sam2_ros  test_hydra.py
src/sam2_ros/sam2_ros/sam2/modeling/backbones/: hieradet.py
src/sam2_ros/sam2_ros/sam2/modeling/sam/: transformer.py
src/sam2_ros/sam2_ros/sam2/utils/: transforms.py
src/sam2_ros/sam2_ros/sam2_configs/: sam2_hiera_s.yaml
src/sam2_ros/sam2_ros/sam2_ros.egg-info/: PKG-INFO  entry_points.txt  requires.txt  top_level.txt
