<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sam2_ros</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="longuzi@todo.todo">longuzi</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend> 

  <exec_depend>torch</exec_depend>          <!-- Added PyTorch --> <!-- Added SAM2 model dependency -->
  <exec_depend>opencv-python</exec_depend>  <!-- Added OpenCV -->
  <exec_depend>matplotlib</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>Pillow</exec_depend>
  <exec_depend>hydra</exec_depend>
  <exec_depend>transformers</exec_depend> 
  <exec_depend>sounddevice</exec_depend> 
    

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
